  recipes. Note that no Node in your society may have the same name as
  an Agent in your society, as Nodes have a Node Agent whose name is
  that of the Node.
- When configuring a Society from scratch in the Configuration
  Builder, give the user an editable drop-down of all known Plugins or
  Binders in the database, not just those in the Society so far (bug 1443).

Release 9.4:
This release constitues the last major Cougaar release for this
calendar year.  This release includes some database schema changes,
and a new communities editing tool. It also includes numerous
usability improvements, and incorporates all of the changes made after
the official 9.2.2 patch release along that branch (see the
9.2.2.1 release notes, below). In particular,
this includes the new ability to export to XML the host-node-agent
(HNA) mapping for an experiment, for preservation when upgrading or
re-loading a CSMART database for example, and then re-importing
(without having to explicitly re-assign Agents to Nodes, etc).

In detail:
- Domain database has been updated. To get the latest data, reload the
  mysqldump.txt file (found in dbmsq/data/mysql), using a command like:
mysql -f -u [user] -p[pw] [db] < mysqldump.txt
- Configuration database schema has changed. To support the UL
  Adaptive Logistics thread, the configuration CFW database now supports
  multiple plugins of the same class in the same Agent. If you plan to
  run the Adaptive Logistics society, you must re-load your
  configuration database, following the instructions in
  InstallAndTest.html
- New Communities editing window. This window allows users to easily
  create new Communities with arbitrary attributes, and add Agents (or
  Communities) to those Communities, with arbitrary attributes. All
  community data is stored on a per-experiment basis, and loaded at
  run-time using the standard DBInitializer. To use this editor,
  select the "Communities" tab in the Experiment Builder.